# tauri-nspanel

./: .gitignore  Cargo.toml  README.md  flake.nix  package.json
.github/workflows/: docs.yml
examples/: README.md
examples/fullscreen/: README.md
examples/fullscreen/public/: index.html
examples/fullscreen/src-tauri/: tauri.conf.json
examples/fullscreen/src-tauri/capabilities/: migrated.json
examples/fullscreen/src-tauri/src/: main.rs
examples/vanilla/: README.md  package.json  pnpm-lock.yaml
examples/vanilla/src-tauri/: Cargo.toml
examples/vanilla/src-tauri/src/: main.rs
src/: lib.rs  macros.rs  raw_nspanel.rs
